finish T2.4